
add_executable(parmasan
        daemon-connection-data.cpp
        daemon-connection-data.hpp
        daemon/daemon-base.hpp
        daemon/daemon-base.cpp
        main.cpp
        make-process.cpp
        make-process.hpp
        parmasan-daemon.cpp
        parmasan-daemon.hpp
        parmasan/access-record.hpp
        parmasan/entry-history.cpp
        parmasan/entry-history.hpp
        parmasan/entry.hpp
        parmasan/file-access-type.hpp
        parmasan/file.cpp
        parmasan/file.hpp
        parmasan/filename-database.cpp
        parmasan/filename-database.hpp
        parmasan/dependency-finder.hpp
        parmasan/target-database.cpp
        parmasan/target-database.hpp
        parmasan/target.cpp
        parmasan/target.hpp
        shared/structures.cpp
        shared/structures.hpp
        tracer-process.cpp
        tracer-process.hpp
        utils/path-walker.cpp
        utils/path-walker.hpp
        utils/run-shell.cpp
        utils/run-shell.hpp
        parmasan/access-record.cpp
        parmasan/build-context.hpp
        parmasan/make-goal.hpp
        parmasan/build-context.cpp
        parmasan/process.hpp
        parmasan/process.cpp
        parmasan/race.hpp
        parmasan/dependency-finder.cpp)

target_include_directories(parmasan PUBLIC .)
